--- a/test.html
+++ b/test.html
@@ -723,7 +723,7 @@
         // ============ INDUSTRY STANDARD CONFIGURATION ============
         const CONFIG = {
             mqtt: {
-                brokerUrl: 'wss://mqtt.ceewen.xyz:8884/mqtt',
+                brokerUrl: 'wss://mqtt.ceewen.xyz:8884',
                 topics: {
                     sessionUpdate: 'rvm/RVM-3101/session/update',
                     userInterface: 'rvm/RVM-3101/ui/state',
